# Indo-MarketMind-AI

./: .gitignore  main.py  pyproject.toml  run_scraper.py  runner.py
.github/workflows/: daily_scraper.yml
app/agent/: brain.py  executor.py  nodes.py  router.py  state.py
app/config/: settings.py
app/scrapers/: news_scraper.py  youtube_scraper.py
app/services/: db_service.py  user_interface_service.py
app/tools/: cleaning.py  stock_tool.py
app/utils/: logging.py
