[project]
name = "ai-news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.2",
    "docling>=2.71.0",
    "fastapi>=0.129.0",
    "fastmcp>=2.14.5",
    "feedparser>=6.0.12",
    "groq<1.0.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.8",
    "openai>=2.16.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "telebot>=0.0.5",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "uvicorn>=0.40.0",
    "yfinance>=1.2.0",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "pykernel>=0.1.6",
]
